# 787DD97A

./: .editorconfig  .gitignore  787DD97A.sln  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml
787DD97A/: 787DD97A_calc.csproj  Calc.cs  CalcForPriceFlat.csproj  ExcelRW.cs  Flat.cs  Flats.cs  Program.cs  SortFlat.cs  param.xlsx  test.xlsx
787DD97A_API/: 787DD97A_API.csproj  Dockerfile  Program.cs  WeatherForecast.cs  appsettings.Development.json  appsettings.json  primer.xlsx
787DD97A_API/Classes/: ApplicationContextClass.cs  ExcelRW.cs  JWTClass.cs  SortFlat.cs  geokoord.cs
787DD97A_API/Controllers/: ApartmentController.cs  UserController.cs  ValuesController.cs  WeatherForecastController.cs  testController.cs
787DD97A_API/Migrations/: 20221104125740_AddLinkInApartmentsTable.Designer.cs  20221104125740_AddLinkInApartmentsTable.cs  20221105122740_ApartmentLinkIsUnique.Designer.cs  20221105122740_ApartmentLinkIsUnique.cs  20221105165638_AddApartmentPrice.Designer.cs  20221105165638_AddApartmentPrice.cs  (+7 more)
787DD97A_Front/: index.html  nginx.conf
787DD97A_Parser/: pyproject.toml
787DD97A_Parser/787DD97A_Parser/: pyproject.toml
787DD97A_Parser/787DD97A_Parser/787dd97a_parser/: main.py
787DD97A_Parser/787DD97A_Parser/787dd97a_parser/modules/: .env  __init__.py  avito.py  db.py
787DD97A_Test/: 787dd97a.side  user_api.py
Test_Calc/: Test_Calc.csproj  Test_Calc.sln  UnitTest_ApartmentArea.cs  UnitTest_DistanseFromMetroStation.cs  UnitTest_FloorLocation.cs  UnitTest_KitchentArea.cs  UnitTest_NumberOfStoreys.cs  UnitTest_repair.cs
(+26 files in other folders)
