[tool.poetry]
name = "787dd97a-parser"
version = "0.1.0"
description = ""
authors = ["00XAH00 <pxaxulin@gmail.com>"]
readme = "README.md"
packages = [{include = "787dd97a_parser"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
